Add compiler flags to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: MIT
 #
-# This file demonstrates the usage of CMake build system to compile 
+# This file demonstrates the usage of CMake build system to compile
 # these examples.
 
 # CMake will refuse to build if actual installed version is older than the one
@@ -13,11 +13,20 @@ cmake_minimum_required(VERSION 2.8.11)
 # More info: https://cmake.org/cmake/help/latest/command/project.html
 project(CppCourseExamples)
 
-# Given that we want an executable for each source code file under this 
+# Given that we want an executable for each source code file under this
 # directory, use file function with GLOB to select all files with extension cc.
 # "SourceFiles" is the output variable, which will be an array of file names.
 # More info: https://cmake.org/cmake/help/latest/command/file.html
 file(GLOB SourceFiles *.cc)
+
+# Here you can find some useful flags that are passed to the compiler.
+# -O0: Indicates to never apply any special optimization to boost performances.
+#  	   This benefits debugging, as the assembly code will generally reflect the
+#  	   structure of your source code.
+# --std=c++11: Indicates to adhere to the ISO C++11 standard and exclude any
+#              newer revision, i.e., C++14, C++17, C++20, ... and GNU dialects.
+# -fno-elide-constructors: Indicates to not optimize copy assignments.
+add_compile_options(-O0 --std=c++11 -fno-elide-constructors)
 
 # Let's now loop over each source file. "file_path" is the iterator variable.
 # More info: https://cmake.org/cmake/help/latest/command/foreach.html
@@ -28,9 +37,8 @@ foreach(file_path ${SourceFiles})
     # Ensure we get the filename only, without its path.
     # More info: https://cmake.org/cmake/help/latest/command/get_filename_component.html
     get_filename_component(filename ${new_name} NAME)
-    # Finally, tell CMake to make an executable named by the variable 
+    # Finally, tell CMake to make an executable named by the variable
     # "filename" from the source code indicated by "file_path".
     # More info: https://cmake.org/cmake/help/latest/command/add_executable.html
     add_executable(${filename} ${file_path})
 endforeach()
-
